--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 env_logger = "0.11.9"
 log = "0.4.29"
+portable-pty = "0.9.0"
 softbuffer = "0.4.8"
 winit = "0.30.12"
