--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 env_logger = "0.11.9"
+fontdue = "0.9.0"
 log = "0.4.29"
 portable-pty = "0.9.0"
 softbuffer = "0.4.8"
